[gd_scene load_steps=4 format=3 uid="uid://y1wc6qyp0j3g"]

[ext_resource type="Texture2D" uid="uid://b110pso62o0jb" path="res://assets/textures/icons/question_mark.png" id="1_1tsgi"]
[ext_resource type="Script" path="res://hud/Table Screen/Windows/Inventory/inventory_item.gd" id="1_b58eb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rri4"]

[node name="Inventory Item" type="Button"]
custom_minimum_size = Vector2(0, 36)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
script = ExtResource("1_b58eb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_1tsgi")
expand_mode = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxFlat_4rri4")

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 313.0
offset_bottom = 12.0
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "Name Here (Count)"
fit_content = true
scroll_active = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
